--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<p>Watch this space!</p>
+<p> Watch this space! </p>
+
+<p> Currently working on javascript that plots the UK's parliamentary constituencies as a hexmap. </p>
